# nrfdfu-rs

./: CHANGELOG.md  Cargo.toml
.github/workflows/: check.yml
src/: elf.rs  init_packet.rs  macros.rs  main.rs  messages.rs  slip.rs
tests/: README.md  blinky.elf  puzzle-fw.elf
